--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div>
         <h3>Uma história intensa</h3>
-        <p>Era Artificial - O Tempo Sombrio das Máquinas deixa o leitor apreensivo com algumas situações que ocorrem em um cenário catastrófico tomado pela destruição. E isso o leva a refletir: veremos um dia a tão temida singularidade tecnológica?</p>
+        <p><span>Era Artificial - O Tempo Sombrio das Máquinas </span>deixa o leitor apreensivo com algumas situações que ocorrem em um cenário catastrófico tomado pela destruição. E isso o leva a refletir: veremos um dia a tão temida singularidade tecnológica?</p>
     </div>
     <!--fim da segunda sessão-->
     <!--inicio da terceira sessão-->
